syntax = "proto3";

message DirResponse {
  bool status = 1;
}